src/test/06-Errors/error-depend-var2.txt
error-depend-var2.ck:4:5: error: variable 'a' is used before declaration
[4] <<< a >>>;
        ^
